--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,43 @@ android {
     }
 }
 
+ext {
+    supportLibraryVersion = '28.0.0'
+    retrofitVersion = '2.4.0'
+    butterKnifeVersion = '9.0.0-rc1'
+    daggerVersion = '2.9'
+    picassoVersion = '2.71828'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
+    implementation "com.android.support:design:$supportLibraryVersion"
+    implementation "com.android.support:support-v4:$supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    // Junit y Expresso Tests
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // Butterknife
+    implementation "com.jakewharton:butterknife:$butterKnifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+    // Picasso
+    implementation "com.squareup.picasso:picasso:$picassoVersion"
+    // Dagger II
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    // Interactuación con APIs Rest Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    // Parseo de JSON
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation 'com.google.code.gson:gson:2.8.2'
+    // Logging HTTP
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    // Programación reactiva con RxJava
+    implementation "io.reactivex.rxjava2:rxjava:2.x.y"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 }
