--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,11 @@ dependencies {
     // Parseo de JSON
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation 'com.google.code.gson:gson:2.8.2'
+    // Parse
+    implementation 'com.parse.bolts:bolts-tasks:1.3.0'
+    implementation 'com.parse:parse-android:1.13.0'
+    implementation 'com.google.android.gms:play-services:9.4.0'
+    implementation 'com.android.support:multidex:1.0.0'
     // Logging HTTP
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     // Programación reactiva con RxJava
