--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".view.activity.StarterConexion"
         android:allowBackup="true"
         android:icon="@mipmap/ic_twitter_launcher"
         android:label="@string/app_name"
