--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activity.CreateAccountActivity" />
-        <activity android:name=".view.activity.MainActivity"></activity>
+        <activity android:name=".view.activity.ContainerMainActivity"></activity>
     </application>
 
 </manifest>
