Implementation of complete flow of Twitter Clone

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ ext {
     butterKnifeVersion = '9.0.0-rc1'
     daggerVersion = '2.9'
     picassoVersion = '2.71828'
+    googleApiClientVersion = '1.22.0'
 }
 
 dependencies {
@@ -63,4 +64,26 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.x.y"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    // Dependencies for Google API Client Libraries
+    implementation("com.google.http-client:google-http-client:$googleApiClientVersion") {
+        exclude module: 'httpclient'
+        exclude module: 'jsr305'
+    }
+    implementation("com.google.api-client:google-api-client-android:$googleApiClientVersion"){
+        exclude module: 'httpclient'
+        exclude module: 'jsr305'
+    }
+    implementation("com.google.apis:google-api-services-language:v1-rev386-$googleApiClientVersion") {
+        exclude module: 'httpclient'
+        exclude module: 'jsr305'
+    }
 }
+
+task copySecretKey(type: Copy) {
+    def File secretKey = file "$System.env.GOOGLE_APPLICATION_CREDENTIALS"
+    from secretKey.getParent()
+    include secretKey.getName()
+    into 'src/main/res/raw'
+    rename secretKey.getName(), "credential.json"
+}
+preBuild.dependsOn(copySecretKey)
