--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+    // exclude files that are not needed from the cloud client libraries
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/INDEX.LIST'
+    }
 }
 
 ext {
@@ -65,18 +81,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     // Dependencies for Google API Client Libraries
-    implementation("com.google.http-client:google-http-client:$googleApiClientVersion") {
-        exclude module: 'httpclient'
-        exclude module: 'jsr305'
-    }
-    implementation("com.google.api-client:google-api-client-android:$googleApiClientVersion"){
-        exclude module: 'httpclient'
-        exclude module: 'jsr305'
-    }
-    implementation("com.google.apis:google-api-services-language:v1-rev386-$googleApiClientVersion") {
-        exclude module: 'httpclient'
-        exclude module: 'jsr305'
-    }
+    implementation 'com.google.cloud:google-cloud-storage:1.22.0'
+    implementation 'com.google.cloud:google-cloud-language:1.22.0'
+    implementation 'io.grpc:grpc-okhttp:1.10.0'
 }
 
 task copySecretKey(type: Copy) {
